2003-04-08 15:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-mouseDown:): Rewrite mouse tracking loop.

2003-04-08 02:12  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSApplication.m: Note which thread is the -gui thread.

	* Source/NSView.m (-setNeedsDisplay:, -setNeedsDisplayInRect:):
	If the current thread isn't the -gui thread, perform the call
	in the main thread instead.

2003-04-07 13:05  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFont.m (-initWithName:matrix:fix:screenFont:): Release
	all memory if the fontInfo can't be created.

2003-04-07 11:56  Alexander Malmberg <alexander@malmberg.org>

	* TextConverters/RTF/rtfGrammer.y: Add error recovery rules.
	* TextConverters/RTF/rtfGrammer.tab.c: Rebuild.

	* TextConverters/RTF/RTFConsumer.m: Change uses of autoreleased
	objects to retain/release explicitly instead.

	(GSRTFError): Try to recover from errors instead of raising an
	exception.

2003-04-06 19:56  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m: Make sure -_handleWindowNeedsDisplay: is run
	on every runloop iteration so -setNeedsDisplay* can be used safely
	from methods invoked by -performSelector:target:argument:order:modes:.

2003-04-06 15:10  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m (-_generateGlyphsUpToCharacter:): Make
	sure that all editing of the text storage has been processed before
	trying to generate glyhps for it.

2003-04-05 12:58  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFontPanel.m (-_initWithoutGModel): Make preview active
	by default.

2003-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/gui/NSAttributedString.h:
	* Headers/gnustep/gui/NSDocumentController.h:
	* Headers/gnustep/gui/NSGraphicsContext.h:
	* Headers/gnustep/gui/NSResponder.h:
	* Headers/gnustep/gui/NSStringDrawing.h:
	* Headers/gnustep/gui/NSTextView.h:
	* Headers/gnustep/gui/NSWindow.h: